# JPocket

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
JPocket/: CMakeLists.txt
JPocket/include/: cpu.h
JPocket/src/: entry_point.cpp
include/: application.h  gui_handler.h  logger.h  resources.h  typedefs.h  window_handler.h  window_specification.h
src/: application.cpp  cpu.cpp  entry_point.cpp  gui_handler.cpp  logger.cpp  resources.cpp  window_handler.cpp  window_specification.cpp
